--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies App</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_movie_deatil">MovieDeatilActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">hello</string>
+    <string name="action_refresh">refresh</string>
 </resources>
