--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,15 @@
 <resources>
     <string name="app_name">Popular Movies App</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_movie_deatil">MovieDeatilActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">hello</string>
-    <string name="action_refresh">refresh</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_sort_order">Sort order</string>
+    <string name="pref_sort_order_key">sort_order_key</string>
+    <string name="pref_most_popular_order">Most Popular</string>
+    <string name="pref_most_popular_order_label">popular</string>
+    <string name="pref_rate_order">Top Rate</string>
+    <string name="pref_rate_order_label">top_rated</string>
 </resources>
