--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Popular Movies App</string>
+    <string name="app_name">Popular Movies</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_movie_deatil">MovieDeatilActivity</string>
     <string name="action_settings">Settings</string>
