--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,7 @@
     <string name="hello_world">hello</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="pref_sort_order">Sort order</string>
-    <string name="pref_sort_order_key">sort_order_key</string>
-    <string name="pref_most_popular_order">Most Popular</string>
-    <string name="pref_most_popular_order_label">popular</string>
-    <string name="pref_rate_order">Top Rate</string>
-    <string name="pref_rate_order_label">top_rated</string>
+    <string name="title_tab_popular">POPULAR</string>
+    <string name="title_tab_rated">RATED</string>
+    <string name="title_tab_favourite">FAVOURITE</string>
 </resources>
