--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="content_authority">com.example.android.popularmovies.app</string>
     <string name="app_name">Popular Movies</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_movie_deatil">MovieDeatilActivity</string>
