The movie detail activity uses a view pager for the overview, trailer and reviews. The overview tab has been improved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="title_tab_popular">POPULAR</string>
     <string name="title_tab_rated">RATED</string>
     <string name="title_tab_favourite">FAVOURITE</string>
+
+    <string name="title_tab_overview">OVERVIEW</string>
+    <string name="title_tab_trailer">TRAILERS</string>
+    <string name="title_tab_review">REVIEWS</string>
+
 </resources>
