Improve the movie detail fragment with card views

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 1. Review inside a fragment. Not web page.
 2. Trailer inside app, using Youtube API.
-3. Layout for different screen size.
+3. Movie Detail Activity create cards for different sections: overview, trailer, reviews.
+4. Movie Detail Activity create a card for summarize information of the film.
+5. Movie Detail Activity use coordinate layout for poster and favorite button...
+
 
 
 
